PosTrack/PNLib-v3.1.33.5652/include/PNDataTypes.h

typedef int                  PNBOOL;   // There lots of different 'boolean' definition in different platform or compiler
/********************************************
 *               Enum types                 *
 ********************************************/

// Suit mode types of sensor at realtime mode
typedef enum _SensorSuitTypes
{
    SS_LegacySensors,   // Wireless legacy suit
    SS_NeuronSensors,   // Neuron nodes suit
    SS_Unknown,          // Unknown type
}SensorSuitTypes;
// Sensor binding combination mode
typedef enum _SensorCombinationModes
{
    SC_ArmOnly,              // Left arm or right arm only
    SC_UpperBody,            // Upper body, include one arm or both arm, must have chest node
    SC_FullBody,             // Full body mode
	SC_LowerBody,            // Lower body, sensors of legs and hips are necessory
    SC_Unknown,              // Unknown type
}SensorCombinationModes;
// Running mode
typedef enum _RunningMode
{
    RM_Realtime,
    RM_RawPlaying,
    RM_Unknown,           // Unknown type
}RunningMode;
// BVH rotate orders
typedef enum _RotateOrders
{
    RO_XZY,
    RO_YXZ,
    RO_XYZ,
    RO_YZX,
    RO_ZXY,
    RO_ZYX,
    RO_Unknown,           // Unknown type
}RotateOrders;
// Quaternion types of output stream
typedef enum _OutputQuaternionTypes
{
    QT_GlobalRawQuat,        // Module Q, by global system
    QT_GlobalBoneQuat,       // Calibrated module Q(Bone Q) 
    QT_LocalBoneQuat,        // Quaternion with parent
    QT_Unknown,              // Unknown type
}OutputQuaternionTypes;
// Acceleration data types of output stream
typedef enum _OutputAccelerationTypes
{
    AT_ModuleRawData,         // Module A, by global system
    AT_GlobalData,            // Calibrated module A(Bone A) 
    AT_Unknown,               // Unknown type
}OutputAccelerationTypes;
// Gyro data types of output stream
typedef enum _OutputGyroType
{
    GY_ModuleRawData,         // Module W, by global system
    GY_GlobalData,            // Calibrated module W(Bone W) 
    GY_Unknown,               // Unknown type
}OutputGyroType;
// Bones can used as constraint 
typedef enum _ConstraintPoint
{
    CP_Hip       = 0,        // Hip
    CP_RightFoot = 3,        // Right foot
    CP_LeftFoot  = 6,        // Left foot
    CP_RightHand = 10,       // Right hand
    CP_LeftHand  = 14,       // Left hand
    CP_Unknown,              // Unknown type
}ConstraintPoint;
// Magnetic immune levels
typedef enum _MagneticImmunityLevel
{
    MI_Disable,              // Disable magnetic immune function
    MI_Weak,                 // Low level  magnetic immune
    MI_Strong,               // Strong level  magnetic immune
    MI_Unknown,              // Unknown type
}MagneticImmunityLevel;
// Poses for calibration
typedef enum _CalibrationTypes
{
    Cali_TPose,              // T pose
    Cali_APose,              // A pose
    Cali_SPose,              // Crouching pose
    Cali_NPose,              // Nod pos
    Cali_Unknown,            // Unknown type
}CalibrationTypes;
// Prop identities
typedef enum _PropIdentity
{
    PI_Prop0,                // Prop0
	PI_Prop1,                // Prop1
	PI_Prop2,                // Prop2
	PI_Prop3,                // Prop3
	PI_Prop4,                // Prop4
	PI_RightShoulderExtra,   // Right shoulder extra
	PI_LeftShoulderExtra,    // Left shoulder extra
    PI_Unknown,              // Unknown type
}PropIdentity;
// Quaternion
typedef struct _Quaternion4_t
{
    float s;
    float x;
    float y;
    float z;
}Quaternion4_t;
// Vector
typedef struct _Vector3_t
{
    float x;
    float y;
    float z;
}Vector3_t;
// Bone dimensions, unit: meter
typedef struct _BoneDimension
{
    float Head;              // Bone length of head
    float Neck;              // Bone length of neck
    float Body;              // Length of body
    float ShoulderWidth;     // Width of shoulder
    float UpperArm;          // Bone length of upper arm
    float Forearm;           // Bone length of forearm
    float Palm;              // Bone length of hand
    float HipWidth;          // Width of hip
    float UpperLeg;          // Bone length of upper leg
    float LowerLeg;          // Bone length of lower leg
    float HeelHeight;        // Heel height
    float FootLength;        // Foot length
}BoneDimension;
// Status of constraint point
typedef struct _ContactStatus
{
    ConstraintPoint Point;            // PointId
    PNBOOL          IsEdited;         // Is edited tag
    PNBOOL          IsContact;        // Is contact tag
}ContactStatus;
// All status of constraint points in one frame
typedef struct _FrameContactData
{
    int           FrameIndex;          // Index of frame data
    ContactStatus ContactInfo[5];      // Status of contraints
}FrameContactData;
typedef struct _SmoothFactors
{
	int GlobalDisplacement;  // Smooth factor of Displacement for all bones
	int GlobalRotation;      // Smooth factor of rotation for all bones
	int HipDisplacement;     // Smooth factor of Displacement specially for hip, global value is override by this value
	int FeetDisplacement;    // Smooth factor of rotation specially for feet, global value is override by this value
	int HipRotation;
	int FeetRotation;
}SmoothFactors;
typedef struct _PropInformation
{
    int          BoneId;     // Bone index in standard bone table
    char         Name[32];   // Prop name
	PNBOOL       IsEnable;   // Whether enabled
    int          SensorId;   // Sensor Id bound to this prop
	int          ParentBoneId; // Parent bone id of prop
	float        Length;     // Prop length
	Vector3_t    Direction;  // Prop initial face direction
}PropInformation;