PosTrack/PNLib-v3.1.33.5652/include/PNCallbacks.h

// Prop data callback
typedef void(__stdcall *PNEventPropDataCallback)(void* customObject, int avatarIndex, TEST_PropData* data);
// BVH string data boradcast callback
typedef void (__stdcall *PNEventBVHStringDataBoardcastCallback)(void* customObject, int avatarIndex, char* bvhData);
// BVH binary data boradcast callback
typedef void(__stdcall *PNEventBVHBinaryDataBoardcastCallback)(void* customObject, int avatarIndex, BvhOutputBinaryHeader* bbp, int packLen);
// Constraint data callback
typedef void(__stdcall *PNEventContactDataCallback)(void* customObject, int avatarIndex, FrameContactData* contactData);
/****************Recognition action data callback************/
// boneId: 发出动作的骨骼Id
// eventCode: 动作代码：
//	8: P0, Single tapping
//	1: P1, Double tapping
//	2: P2, Fire
//	3: P3, In-ward flipping
//	4: P4, Out-ward flipping
// level: range1~10, undefined
typedef void(__stdcall *PNEventActionRecognitionDataStringStreamCallback)(void* customObject, int avatarIndex, char* actionData);