PosTrack/PNLib-v3.1.33.5652/include/PNLib.cs

/*
* Copyright: Copyright 2014 Beijing Noitom Technology Ltd. All Rights reserved.
* Pending Patents: PCT/CN2014/085659 PCT/CN2014/071006
* 
* Licensed under the Perception Neuron SDK License Beta Version (the “License");
* You may only use the Perception Neuron SDK when in compliance with the License,
* which is provided at the time of installation or download, or which
* otherwise accompanies this software in the form of either an electronic or a hard copy.
* 
* Unless required by applicable law or agreed to in writing, the Perception Neuron SDK
* distributed under the License is provided on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing conditions and
* limitations under the License.
*/

using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

using System.Runtime.InteropServices;

// Wrapper of PNLib SDK for C#
namespace PNLibCSharpImporter
{
    #region delegates
    public delegate void PNEventBVHStringDataBoardcastCallback(IntPtr customObject, int avatarID, string data);
    public delegate void PNEventBVHBinaryDataBoardcastCallback(IntPtr customObject, int avatarID, IntPtr pack, int packLen);
    public delegate void PNCalculationDataCallback(IntPtr customObject, string data); // 中间数据导出 callback
    public delegate void PNCalculatedBinaryDataCallback(IntPtr customObject, int avatarIndex, IntPtr pack, int packLen);
    public delegate void PNCalibrationCallback(IntPtr customObject, int avatarIndex, float percent);
    public delegate void PNMatrixDataCallback(IntPtr customObject, int avatarIndex, string matData); // 实时M矩阵数据callback
    public delegate void PNEventPropDataCallback(IntPtr customObject, int avatarIndex, ref PropData propData);
    // 播放进度
    public delegate void PNPlayProgressCallback(IntPtr customObject, int currentFrame, int totalFrames);

    // 接触信息回调函数
    public delegate void PNEventContactDataCallback(IntPtr customObject, int avatarIndex, ref FrameContactData statusData);

    public delegate void PNRawDataParsedCallback(IntPtr customObject, int moduleId, [MarshalAs(UnmanagedType.LPArray, SizeConst = 4)]float[] q, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] w, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] a);

    /// <summary>
    /// 识别事件的回调函数
    /// </summary>
    /// <param name="eventCode">事件代码</param>
    /// <param name="direction">发射朝向</param>
    /// <param name="position">发射位置</param>
    /// <param name="level">力度等级</param>
    public delegate void PNRecognizedEvent(IntPtr customObject, int avatarIndex, int boneId, int eventCode, int level);
    // 字符串方式
    public delegate void PNEventActionRecognitionDataStringStreamCallback(IntPtr customObject, int avatarIndex, [MarshalAs(UnmanagedType.LPStr)]string data);
    // 
    public delegate void PNBodySwingVectorCallback(IntPtr customObject, int avatarIndex, int moduleId, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] vect);
    public delegate void PNBodySwingVectorStringCallback(IntPtr customObject, int avatarIndex, [MarshalAs(UnmanagedType.LPStr)]string data);

    public delegate void PNBodyMassVectorCallback(IntPtr customObject, int avatarIndex, float x, float y, float z);
    public delegate void PNBodyMassVectorStringCallback(IntPtr customObject, int avatarIndex, [MarshalAs(UnmanagedType.LPStr)]string data);
    #endregion

    #region Data types
    public enum RunningMode
    {
        RM_Realtime,
        RM_RawPlaying,
        RM_Unknown,           // Unknown type
    }

    // 传感器套件模式
    public enum SensorSuitTypes
    {
        SS_LegacyNodes,
        SS_NeuronNodes,
    };

    // Node combination types
    public enum SensorCombinationModes
    {
        SC_ArmOnly,              // Left arm or right arm only
        SC_UpperBody,            // Upper body, include one arm or both arm, must have chest node
        SC_FullBody,             // Full body mode
        SC_LowerBody,            // ower body, sensors of legs and hips are necessory
        SC_Unknown,              // Unknown mode
    };
    // bvh rotate order
    public enum RotateOrders
    {
        XZY,
        YXZ,
        XYZ,
        YZX,
        ZXY,
        ZYX,
    };
    
    public enum ExportDataFormat
    {
        fbx = 0,
    }

    public enum NetDataOutputServiceTypes
    {
        TCP,
        UDP,
    };

    public enum NetDataOutputBlockTypes
    {
        BinaryType,
        StringType,
    };

    // 校准动作类型定义
    public enum CalibrationTypes
    {
        Cali_TPose,  // T pose
        Cali_APose,  // A pose
        Cali_SPose,  // 屈膝校准
        Cali_NPose,  // 点头校准
    };
    
    // Quaternion types of output stream
    public enum OutputQuaternionTypes
    {
        QT_GlobalRawQuat,        // Module Q, by global system
        QT_GlobalBoneQuat,       // Calibrated module Q(Bone Q) 
        QT_LocalBoneQuat,        // Quaternion with parent
    };

    // Acceleration data types of output stream
    public enum OutputAccelerationTypes
    {
        AT_ModuleRawData,        // Module A, by global system
        AT_GlobalData,           // Calibrated module A(Bone A) 
    };

    // Gyro data types of output stream
    public enum OutputGyroType
    {
        GY_ModuleRawData,        // Module W, by global system
        GY_GlobalData,           // Calibrated module W(Bone W) 
    };

    // Prop identities
    public enum PropIdentity
    {
        PI_Prop0,                // Prop0
	    PI_Prop1,                // Prop1
	    PI_Prop2,                // Prop2
	    PI_Prop3,                // Prop3
	    PI_Prop4,                // Prop4
	    PI_RightShoulderExtra,   // Right shoulder extra
	    PI_LeftShoulderExtra,    // Left shoulder extra
        PI_Unknown,              // Unknown type
    };
        

    public enum MagneticImmunityLevel
    {
        DisableMI, // 不使用磁免疫
        WeakMI,    // 弱磁免疫（只用在脚上）
        StrongMI,  // 强磁免疫（用在脚和小腿上）
    };
    
    // 接触点枚举
    public enum ConstraintPoint
    {
        Hip = 0, // Hip
        FR = 3,  // Right foot
        FL = 6,  // Left foot
        HR = 10, // Right hand
        HL = 14, // Left hand
    };

    public struct Vector3_t
    {
        public float x;
        public float y;
        public float z;
    };

    public struct Quaternion4_t
    {
        public float s;
        public float x;
        public float y;
        public float z;
    };

    // 身体骨骼尺寸（单位：厘米）
    public struct BoneDimension
    {
        public float Head;          
        public float Neck;          
        public float Body;          
        public float ShoulderWidth; 
        public float UpperArm;      
        public float Forearm;       
        public float Palm;          
        public float HipWidth;      
        public float UpperLeg;      
        public float LowerLeg;      
        public float HeelHeight;    
        public float FootLength;    
    };

    // Bone size
    public struct BVHBoneInfo
    {
        public int Index;             // Bone Index in standard bone table
        [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 60)]
        public string Name;           // Bone name
        public float Length;          // Bone length
    }

    [StructLayout(LayoutKind.Explicit)]
    public struct EditingPoint
    {
        [FieldOffset(0)]
        public ConstraintPoint Point;
        [FieldOffset(4)]
        public bool IsEdit;
        [FieldOffset(8)]
        public bool IsContact;
        [FieldOffset(12)]
        public bool IsUseDefault;
    }

    // dynamic library version info
    [StructLayout(LayoutKind.Sequential)]
    public struct DylibVersion
    {
        public ushort Major;            // Major number
        public ushort Minor;            // Minor number
        public ushort Revision;         // Revision number
        public ushort Build;            // Build number
    };

    [StructLayout(LayoutKind.Sequential)]
    public struct ContactStatus
    {
        public int PointId;
        public bool IsEdited;
        public bool IsContact;
    };

    public struct FrameContactData
    {
        public int frameIndex;
        public ContactStatus Hip;
        public ContactStatus RightFoot;
        public ContactStatus LeftFoot;
        public ContactStatus RightHand;
        public ContactStatus LeftHand;
    };

    [StructLayout(LayoutKind.Sequential)]
    public struct SmoothFactors
    {
        public int GlobalDisplacement;    // Smooth factor of Displacement for all bones
        public int GlobalRotation;      // Smooth factor of rotation for all bones
        public int HipDisplacement;       // Smooth factor of Displacement specially for hip, global value is override by this value
        public int FeetDisplacement;      // Smooth factor of rotation specially for feet, global value is override by this value
        public int HipRotation;
        public int FeetRotation;
    };


    [StructLayout(LayoutKind.Sequential)]
    public struct PropInformation
    {
	    public bool IsEnable;          // Whether enabled
	    public int ParentBoneId;       // Parent bone id of prop
	    public int SensorId;           // Sensor Id bound to this prop
	    public float Length;           // Prop length, unit: meter
	    public Vector3_t Rotation;     // Prop initial face direction
    };

    [StructLayout(LayoutKind.Sequential)]
    public struct PropData
    {
        int           BoneId;          // Id of prop in standard bone table
        int           SensorId;        // Sensor bound to this prop bone
        Quaternion4_t Rotation;        // Ratation of sensor
        Vector3_t     Acc;             // Acceleration of senosr
        Vector3_t     Gyro;            // Gyro of sensor
        Vector3_t     BoneStart;       // Start position of prop in parent coordinate system
        Vector3_t     BoneEnd;         // End position of prop
        Vector3_t     BoneAngle;       // Angle relative to the parent node
        Vector3_t     SensorPosition;  // 
        Vector3_t     SensorVelocity;  // 
    };

    [StructLayout(LayoutKind.Sequential)]
    public struct Params
    {
        // 帧间隔
        public float dt;
        public float wERR;

        // 加速度计的误差协方差矩阵初始化;根据加速度传感器datasheet，noise density换算得出
        public float aERR;

        // 设角度观测误差级别为7度
        public float alpha;

        public float dERR;

        // 重力投影所引入的误差，该误差与投影的角度测量相关，而角度测量与q相关，此处假定角度测量误差较大时有alpha度的测量偏差
        public float gERR;

        // 速度衰减系数
        public float damp;

        // 位移积分时的速度衰减系数,由于速度不足，这里做了个补偿
        public float damp1;


        // 增益调整系数;
        public float c;

        // 重力加速度大小,用一个略大的重力加速度压住模型不让丫飘起来
        public float g;

        // 状态误差协方差矩阵初始化；P矩阵会迅速迭代收敛，因此初始化无需精确，随意即可，设置好一点收敛快一些罢了
        public float Perr;

        public int freq;

        // 粘连
        public int stick;

        public float tcrrr;

        public float tol1;

        public float tol2;

        public float tol3;

        public float atol;

        public float vtol;

        // 全身位移k
        public float kBodyX;

        // 全身速度k
        public float kBodyV;

        // 脚部位移k
        public float kFeetX;

        // 脚部速度k
        public float kFeetV;

        // 脚部位移z方向分段下捏系数（kFeetX的一个百分系数）
        public float kFeetZ;

        // 臀部接触高度
        public float hipH;

        // Center of mass
        public float acmm;

        // 是否打开重心判断
        public int massSwitch;

        // 是否捏双脚
        public int constrain;
        // 手部捏与不捏
        public int constrainHands;
        // 臀部捏与不捏
        public int constrainHip;
    }

    // test...
    public struct FootContactData
    {
        public bool IsContact;
        public float FootHeight;
    };

    #endregion
